# TFIDFAnalyzer

./: CMakeLists.txt  LICENSE  README.md  documents.txt
data/: doc1.txt  doc2.txt  doc3.txt
src/: QueryHandler.cpp  QueryHandler.h  TFIDFCalculator.cpp  TFIDFCalculator.h  TextProcessor.cpp  TextProcessor.h  main.cpp
